# Project-0

./: .env  README.md  main.py  pyproject.toml  requirements.txt
app/: database.py  database2.py  main.py  models.py  routes.py  schemas.py  service.py  service2.py
