[project]
name = "project-0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "certifi>=2025.11.12",
    "dnspython>=2.8.0",
    "dotenv>=0.9.9",
    "fastapi>=0.124.2",
    "motor>=3.7.1",
    "pydantic[email]>=2.12.5",
    "pymongo[srv]>=4.15.5",
    "uvicorn>=0.38.0",
]
